Fix problem with asynchronous triad study anims
Resolve #2614
Doesn't exactly solve the problem since the box shadow is a different colour from the background, but it also doesn't look significantly worse than not having it

--- a/public/stylesheets/time-studies.css
+++ b/public/stylesheets/time-studies.css
@@ -257,6 +257,7 @@
 .o-time-study-triad--available:hover {
   color: black;
   background: var(--color-v--base);
+  animation: a-time-study 1.5s infinite;
 }
 
 @keyframes a-time-study-dilation {
